--- a/fingertip/src/main/AndroidManifest.xml
+++ b/fingertip/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.praszapps.easyfingerprint">
+    package="com.praszapps.fingertip">
 
     <uses-permission android:name="android.permission.USE_FINGERPRINT" />
 </manifest>
