--- a/fingertip/build.gradle
+++ b/fingertip/build.gradle
@@ -1,4 +1,7 @@
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 apply plugin: 'maven-publish'
 
 def artifactId = 'Fingertip'
@@ -59,8 +62,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
     implementation "com.google.dagger:dagger:2.16"
-    annotationProcessor "com.google.dagger:dagger-compiler:2.16"
+    kapt "com.google.dagger:dagger-compiler:2.16"
     implementation 'com.google.dagger:dagger-android-support:2.16' // if you use the support libraries
-    annotationProcessor 'com.google.dagger:dagger-android-processor:2.16'
+    kapt 'com.google.dagger:dagger-android-processor:2.16'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
-
