--- a/fingertip/build.gradle
+++ b/fingertip/build.gradle
@@ -5,7 +5,7 @@ apply plugin: 'kotlin-kapt'
 apply plugin: 'maven-publish'
 
 def artifactId = 'Fingertip'
-def groupId = 'com.praszapps.uikit'
+def groupId = 'com.praszapps.util'
 
 android {
     compileSdkVersion 28
@@ -14,7 +14,7 @@ android {
         minSdkVersion 23
         targetSdkVersion 28
         versionCode 1
-        versionName "0.1.2"
+        versionName "0.1.3"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
