--- a/build.gradle
+++ b/build.gradle
@@ -36,4 +36,11 @@ ext {
     isPrelease = true
     preReleaseSuffix = "-SNAPSHOT"
     minimumSdkVersion = 19
+
+    daggerVersion = "2.16"
+    androidSupportLibVersion = "28.0.0-rc02"
+    constraintLayoutVersion = "1.1.3"
+    junitVersion = "4.12"
+    testRunnerVersion = "1.0.2"
+    espressionVersion = "3.0.2"
 }
