Removed Rx and added Coroutines

--- a/fingertip/build.gradle
+++ b/fingertip/build.gradle
@@ -3,9 +3,37 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'maven-publish'
+apply plugin: 'com.jfrog.bintray'
+apply plugin: 'com.github.dcendents.android-maven'
 
-def artifactId = 'Fingertip'
-def groupId = 'com.praszapps.util'
+def artifactId = 'fingertip'
+def groupId = 'com.praszapps.fingertip'
+
+ext {
+
+    bintrayRepo = "praszappsMaven"
+    bintrayName = "com.praszapps.fingertip"
+
+    libraryName = artifactId
+
+    publishedGroupId = groupId
+    artifact = 'clapfab'
+    libraryVersion = generateVersionName()
+
+    libraryDescription = 'Fingertip - The easy fingerprint authentication library for Android'
+
+    siteUrl = 'https://github.com/prasannajeet/Fingertip'
+    gitUrl = 'https://github.com/prasannajeet/Fingertip.git'
+
+
+    developerId = 'prasannajeet89'
+    developerName = 'Praszapps'
+    developerEmail = 'developer.praszapps@gmail.com'
+
+    licenseName = 'MIT License'
+    licenseUrl = 'https://opensource.org/licenses/MIT'
+    allLicenses = ["MIT License"]
+}
 
 android {
     compileSdkVersion 28
@@ -90,6 +118,16 @@ dependencies {
     api "com.google.dagger:dagger-android-support:$rootProject.ext.daggerVersion" // if you use the support libraries
     kapt "com.google.dagger:dagger-android-processor:$rootProject.ext.daggerVersion"*/
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"// ReactiveX
-    implementation "io.reactivex.rxjava2:rxjava:$project.rxVersion"
-    implementation "io.reactivex.rxjava2:rxandroid:$project.rxVersion"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:0.26.0"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:0.26.0"
+}
+
+if (project.rootProject.file('local.properties').exists()) {
+    apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
+    apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
+}
+kotlin {
+    experimental {
+        coroutines "enable"
+    }
 }
