--- a/janus-authenticator/build.gradle
+++ b/janus-authenticator/build.gradle
@@ -29,7 +29,6 @@ kotlin {
 
 android {
     compileSdkVersion 28
-
     defaultConfig {
         minSdkVersion rootProject.ext.minimumSdkVersion
         targetSdkVersion 28
@@ -39,11 +38,9 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
     }
-
     lintOptions {
         abortOnError false
     }
-
     buildTypes {
 
         debug {
@@ -96,7 +93,7 @@ publishing {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "com.android.support:appcompat-v7:$rootProject.ext.androidSupportLibVersion"
     implementation "com.android.support.constraint:constraint-layout:$rootProject.ext.constraintLayoutVersion"
     testImplementation "junit:junit:$rootProject.ext.junitVersion"
@@ -104,10 +101,11 @@ dependencies {
     androidTestImplementation "com.android.support.test.espresso:espresso-core:$rootProject.ext.espressionVersion"
     implementation "com.android.support:design:$rootProject.ext.androidSupportLibVersion"
     /*api "com.google.dagger:dagger:$rootProject.ext.daggerVersion"
-    kapt "com.google.dagger:dagger-compiler:$rootProject.ext.daggerVersion"
-    api "com.google.dagger:dagger-android-support:$rootProject.ext.daggerVersion" // if you use the support libraries
-    kapt "com.google.dagger:dagger-android-processor:$rootProject.ext.daggerVersion"*/
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"// ReactiveX
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:0.26.0"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:0.26.0"
+        kapt "com.google.dagger:dagger-compiler:$rootProject.ext.daggerVersion"
+        api "com.google.dagger:dagger-android-support:$rootProject.ext.daggerVersion" // if you use the support libraries
+        kapt "com.google.dagger:dagger-android-processor:$rootProject.ext.daggerVersion"*/
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    // ReactiveX
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.26.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:0.26.0'
 }
