--- a/janus-authenticator/src/main/AndroidManifest.xml
+++ b/janus-authenticator/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.praszapps.fingertip">
+    package="com.praszapps.janus">
 
     <uses-permission android:name="android.permission.USE_BIOMETRIC" />
     <uses-permission android:name="android.permission.USE_FINGERPRINT" />
