--- a/janus-authenticator/build.gradle
+++ b/janus-authenticator/build.gradle
@@ -207,7 +207,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'maven-publish'
-apply plugin: 'com.novoda.bintray-release'
+apply plugin: "guru.stefma.bintrayrelease"
 
 def libArtifactId = 'janus'
 def libGroupId = 'com.praszapps.biometric'
@@ -216,13 +216,13 @@ def libGroupId = 'com.praszapps.biometric'
 publish {
     userOrg = 'prasannajeet89'
     repoName = 'praszappsMaven'
-    groupId = libGroupId
+    group = libGroupId
     artifactId = libArtifactId
-    publishVersion = generateVersionName()
+    version = generateVersionName()
     desc = 'Janus - The easy biometric authentication library for Android'
-    website = 'https://github.com/prasannajeet/Janus'
-    issueTracker = 'https://github.com/prasannajeet/Janus/issues'
-    repository = 'https://github.com/prasannajeet/Janus.git'
+    website = 'https://gitlab.com/prasannajeet/Janus'
+    issueTracker = 'https://gitlab.com/prasannajeet/Janus/issues'
+    repository = 'https://gitlab.com/prasannajeet/Janus.git'
 }
 
 kotlin {
@@ -239,7 +239,7 @@ android {
         versionCode generateVersionCode()
         versionName generateVersionName()
 
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
     }
     lintOptions {
@@ -265,26 +265,22 @@ private Integer generateVersionCode() {
 }
 
 private String generateVersionName() {
-    String versionName = "${rootProject.ext.versionMajor}.${rootProject.ext.versionMinor}.${rootProject.ext.versionPatch}"
-
-    return versionName
+    return "${rootProject.ext.versionMajor}.${rootProject.ext.versionMinor}.${rootProject.ext.versionPatch}"
 }
 
-publishing {
+/*publishing {
     publications {
         maven(MavenPublication) {
 
             setGroupId(libGroupId)
             setArtifactId(libArtifactId)
             setVersion(android.defaultConfig.versionName)
-            project.logger.lifecycle("I am in publications")
             artifact(bundleRelease)
             pom.withXml {
-                project.logger.lifecycle("I am in withXml")
                 def dependenciesNode = asNode().appendNode('dependencies')
                 configurations.implementation.allDependencies.each {
                     if ("unspecified" != it.name) {
-                        project.logger.lifecycle("Dependency addded - "+it.group+":"+it.name+":"+it.version)
+                        project.logger.lifecycle("Dependency addded - group("+it.group+"):name("+it.name+"):version("+it.version+")")
                         def dependencyNode = dependenciesNode.appendNode('dependency')
                         dependencyNode.appendNode('groupId', it.group)
                         dependencyNode.appendNode('artifactId', it.name)
@@ -294,17 +290,16 @@ publishing {
             }
         }
     }
-}
+}*/
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation "com.android.support:appcompat-v7:$rootProject.ext.androidSupportLibVersion"
-    implementation "com.android.support.constraint:constraint-layout:$rootProject.ext.constraintLayoutVersion"
-    testImplementation "junit:junit:$rootProject.ext.junitVersion"
-    androidTestImplementation "com.android.support.test:runner:$rootProject.ext.testRunnerVersion"
-    androidTestImplementation "com.android.support.test.espresso:espresso-core:$rootProject.ext.espressionVersion"
-    implementation "com.android.support:design:$rootProject.ext.androidSupportLibVersion"
+    implementation "androidx.appcompat:appcompat:$androidXAppcompatVersion"
+    implementation "androidx.constraintlayout:constraintlayout:$constraintLayoutVersion"
+    testImplementation "junit:junit:$junitVersion"
+    androidTestImplementation "androidx.test:runner:$testRunnerVersion"
+    implementation "com.google.android.material:material:$materialVersion"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.26.0'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:0.26.0'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutinesVersion"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutinesVersion"
 }
