--- a/janus-authenticator/build.gradle
+++ b/janus-authenticator/build.gradle
@@ -1,5 +1,5 @@
 /*
- *    Copyright [2018] [Prasannajeet Pani]
+ *    Copyright 2018 Prasannajeet Pani
  *
  *    Licensed under the Apache License, Version 2.0 (the "License");
  *    you may not use this file except in compliance with the License.
@@ -35,6 +35,7 @@ publish {
     website = 'https://gitlab.com/prasannajeet/Janus'
     issueTracker = 'https://gitlab.com/prasannajeet/Janus/issues'
     repository = 'https://gitlab.com/prasannajeet/Janus.git'
+    licences = 'Apache 2.0'
 }
 
 kotlin {
