--- a/janus-authenticator/src/main/AndroidManifest.xml
+++ b/janus-authenticator/src/main/AndroidManifest.xml
@@ -14,9 +14,12 @@
   ~    limitations under the License.
   -->
 
+<!--suppress DeprecatedClassUsageInspection -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.praszapps.janus">
 
     <uses-permission android:name="android.permission.USE_BIOMETRIC" />
     <uses-permission android:name="android.permission.USE_FINGERPRINT" />
+
+    <application android:supportsRtl="true" />
 </manifest>
