Fixed callback result
Signed-off-by: Prasan Pani <prasannajeet89@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,4 @@ testfingerprint/.gitignore
 .idea/shelf/LiveData1.xml
 .idea/shelf/LiveData/shelved.patch
 .idea/gradle.xml
+.idea/sonarlint/issuestore
