--- a/build.gradle
+++ b/build.gradle
@@ -22,22 +22,22 @@ ext {
     minimumSdkVersion = 21
 
 
-    androidXAppcompatVersion = "1.0.0"
-    constraintLayoutVersion = "2.0.0-alpha2"
+    androidXAppcompatVersion = "1.1.0"
+    constraintLayoutVersion = "2.0.0-beta4"
     testRunnerVersion = "1.1.0-alpha4"
-    materialVersion = "1.0.0"
-    coroutinesVersion = "0.26.0"
+    materialVersion = "1.1.0"
+    coroutinesVersion = "1.3.5"
     junitVersion = "4.12"
-    livedataVersion = "2.0.0"
+    livedataVersion = "2.2.0"
 }
 buildscript {
-    ext.kotlin_version = '1.2.71'
+    ext.kotlin_version = '1.3.71'
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath 'com.android.tools.build:gradle:3.6.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'guru.stefma.bintrayrelease:bintrayrelease:1.0.0'
     }
