--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,3 @@
-
 #
 #    Copyright 2018 Prasannajeet Pani
 #
@@ -14,8 +13,10 @@
 #    See the License for the specific language governing permissions and
 #    limitations under the License.
 #
+
+#Sun Apr 12 13:01:33 EDT 2020
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-4.10-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-5.6.4-all.zip
