--- a/janus-authenticator/build.gradle
+++ b/janus-authenticator/build.gradle
@@ -45,10 +45,10 @@ kotlin {
 }
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 29
     defaultConfig {
         minSdkVersion rootProject.ext.minimumSdkVersion
-        targetSdkVersion 28
+        targetSdkVersion 29
         versionCode generateVersionCode()
         versionName generateVersionName()
 
@@ -95,7 +95,7 @@ private String generateVersionName() {
 dependencies {
     implementation "androidx.appcompat:appcompat:$androidXAppcompatVersion"
     implementation "androidx.constraintlayout:constraintlayout:$constraintLayoutVersion"
-    implementation "androidx.core:core-ktx:$androidXAppcompatVersion"
+    implementation 'androidx.core:core-ktx:1.2.0'
     implementation "com.google.android.material:material:$materialVersion"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutinesVersion"
